# fse-techincal-challenge

./: .env.example  Makefile
backend/: pyproject.toml
backend/app/: main.py
backend/app/config/: config.py
backend/app/models/: responses.py
backend/app/routes/: routes.py
backend/app/services/: data_service.py
backend/data/: articles.json
docs/: IMPLEMENTATION.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AnalysisResult.tsx
frontend/lib/: api.ts
