[project]
name = "article-reputation-analyzer"
version = "0.1.0"
description = "FSE technical challenge — article reputation analysis backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "openai>=2.21.0",
    "pydantic>=2",
    "pydantic-settings>=2.13.0",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
